// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot tests basic configuration with stylistic formatting 1`] = `
"
import globals from "globals";
    

/** @type {import('eslint').Linter.Config[]} */
export default [
  ,
  {
    files: ["**/*.ts", "**/*.tsx"],
    languageOptions: { 
      globals: {
        ...globals.node,
        ...globals.jest,
      },
      parser: tseslint.parser,
      parserOptions: {
        ecmaVersion: 2018,
        sourceType: "module",
        project: "./tsconfig.json",
      },
    },
    settings: {
      "import/parsers": {
        "@typescript-eslint/parser": [".ts", ".tsx"],
      },
      "import/resolver": {
        typescript: {
          project: "./tsconfig.json",
          alwaysTryTypes: true,
        }
      },
    },
    plugins: {
    },
    rules: {
      "@typescript-eslint/no-require-imports": "error",
      "import/no-extraneous-dependencies": ["error",{"devDependencies":[],"optionalDependencies":false,"peerDependencies":true}],
      "import/no-unresolved": "error",
      "import/order": ["warn",{"groups":["builtin","external"],"alphabetize":{"order":"asc","caseInsensitive":true}}],
      "import/no-duplicates": "error",
      "no-shadow": "off",
      "@typescript-eslint/no-shadow": "error",
      "@stylistic/key-spacing": "error",
      "@stylistic/no-multiple-empty-lines": "error",
      "@typescript-eslint/no-floating-promises": "error",
      "no-return-await": "off",
      "@typescript-eslint/return-await": "error",
      "@stylistic/no-trailing-spaces": "error",
      "dot-notation": "error",
      "no-bitwise": "error",
      "@typescript-eslint/member-ordering": ["error",{"default":["public-static-field","public-static-method","protected-static-field","protected-static-method","private-static-field","private-static-method","field","constructor","method"]}]
    }
  },
  {
    ignores: ["*.js", "*.d.ts", "node_modules/", "*.generated.ts", "coverage"]
  }
];"
`;

exports[`snapshot tests commonjs module type 1`] = `
"
const globals = require("globals");
    

/** @type {import('eslint').Linter.Config[]} */
module.exports = [
  ,
  {
    files: ["**/*.ts", "**/*.tsx"],
    languageOptions: { 
      globals: {
        ...globals.node,
        ...globals.jest,
      },
      parser: tseslint.parser,
      parserOptions: {
        ecmaVersion: 2018,
        sourceType: "module",
        project: "./tsconfig.json",
      },
    },
    settings: {
      "import/parsers": {
        "@typescript-eslint/parser": [".ts", ".tsx"],
      },
      "import/resolver": {
        typescript: {
          project: "./tsconfig.json",
          alwaysTryTypes: true,
        }
      },
    },
    plugins: {
    },
    rules: {
      "@typescript-eslint/no-require-imports": "error",
      "import/no-extraneous-dependencies": ["error",{"devDependencies":[],"optionalDependencies":false,"peerDependencies":true}],
      "import/no-unresolved": "error",
      "import/order": ["warn",{"groups":["builtin","external"],"alphabetize":{"order":"asc","caseInsensitive":true}}],
      "import/no-duplicates": "error",
      "no-shadow": "off",
      "@typescript-eslint/no-shadow": "error",
      "@stylistic/key-spacing": "error",
      "@stylistic/no-multiple-empty-lines": "error",
      "@typescript-eslint/no-floating-promises": "error",
      "no-return-await": "off",
      "@typescript-eslint/return-await": "error",
      "@stylistic/no-trailing-spaces": "error",
      "dot-notation": "error",
      "no-bitwise": "error",
      "@typescript-eslint/member-ordering": ["error",{"default":["public-static-field","public-static-method","protected-static-field","protected-static-method","private-static-field","private-static-method","field","constructor","method"]}]
    }
  },
  {
    ignores: ["*.js", "*.d.ts", "node_modules/", "*.generated.ts", "coverage"]
  }
];"
`;

exports[`snapshot tests configuration with prettier formatting 1`] = `
"
import globals from "globals";
    

/** @type {import('eslint').Linter.Config[]} */
export default [
  ,
  {
    files: ["**/*.ts", "**/*.tsx"],
    languageOptions: { 
      globals: {
        ...globals.node,
        ...globals.jest,
      },
      parser: tseslint.parser,
      parserOptions: {
        ecmaVersion: 2018,
        sourceType: "module",
        project: "./tsconfig.json",
      },
    },
    settings: {
      "import/parsers": {
        "@typescript-eslint/parser": [".ts", ".tsx"],
      },
      "import/resolver": {
        typescript: {
          project: "./tsconfig.json",
          alwaysTryTypes: true,
        }
      },
    },
    plugins: {
    },
    rules: {
      "@typescript-eslint/no-require-imports": "error",
      "import/no-extraneous-dependencies": ["error",{"devDependencies":[],"optionalDependencies":false,"peerDependencies":true}],
      "import/no-unresolved": "error",
      "import/order": ["warn",{"groups":["builtin","external"],"alphabetize":{"order":"asc","caseInsensitive":true}}],
      "import/no-duplicates": "error",
      "no-shadow": "off",
      "@typescript-eslint/no-shadow": "error",
      "@stylistic/key-spacing": "error",
      "@stylistic/no-multiple-empty-lines": "error",
      "@typescript-eslint/no-floating-promises": "error",
      "no-return-await": "off",
      "@typescript-eslint/return-await": "error",
      "@stylistic/no-trailing-spaces": "error",
      "dot-notation": "error",
      "no-bitwise": "error",
      "@typescript-eslint/member-ordering": ["error",{"default":["public-static-field","public-static-method","protected-static-field","protected-static-method","private-static-field","private-static-method","field","constructor","method"]}]
    }
  },
  {
    ignores: ["*.js", "*.d.ts", "node_modules/", "*.generated.ts", "coverage"]
  }
];"
`;

exports[`snapshot tests with devDirs configuration 1`] = `
"
import globals from "globals";
    

/** @type {import('eslint').Linter.Config[]} */
export default [
  ,
  {
    files: ["**/*.ts", "**/*.tsx", "test", "scripts"],
    languageOptions: { 
      globals: {
        ...globals.node,
        ...globals.jest,
      },
      parser: tseslint.parser,
      parserOptions: {
        ecmaVersion: 2018,
        sourceType: "module",
        project: "./tsconfig.json",
      },
    },
    settings: {
      "import/parsers": {
        "@typescript-eslint/parser": [".ts", ".tsx"],
      },
      "import/resolver": {
        typescript: {
          project: "./tsconfig.json",
          alwaysTryTypes: true,
        }
      },
    },
    plugins: {
    },
    rules: {
      "@typescript-eslint/no-require-imports": "error",
      "import/no-extraneous-dependencies": ["error",{"devDependencies":["**/test/**","**/scripts/**"],"optionalDependencies":false,"peerDependencies":true}],
      "import/no-unresolved": "error",
      "import/order": ["warn",{"groups":["builtin","external"],"alphabetize":{"order":"asc","caseInsensitive":true}}],
      "import/no-duplicates": "error",
      "no-shadow": "off",
      "@typescript-eslint/no-shadow": "error",
      "@stylistic/key-spacing": "error",
      "@stylistic/no-multiple-empty-lines": "error",
      "@typescript-eslint/no-floating-promises": "error",
      "no-return-await": "off",
      "@typescript-eslint/return-await": "error",
      "@stylistic/no-trailing-spaces": "error",
      "dot-notation": "error",
      "no-bitwise": "error",
      "@typescript-eslint/member-ordering": ["error",{"default":["public-static-field","public-static-method","protected-static-field","protected-static-method","private-static-field","private-static-method","field","constructor","method"]}]
    }
  },
  {
    ignores: ["*.js", "*.d.ts", "node_modules/", "*.generated.ts", "coverage"]
  }
];"
`;
